feat: implement role based authorization and secure user APIs