@@ -2,10 +2,12 @@ package com.devflow.backend.security;
 
 import com.devflow.backend.entity.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 
 public class CustomUserDetails implements UserDetails {
@@ -17,11 +19,11 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
-    }
-
-    public String getActualUsername() {
-        return user.getUsername();
+        return List.of(
+                new SimpleGrantedAuthority(
+                        "ROLE_" + user.getRole().name()
+                )
+        );
     }
 
     @Override
@@ -53,5 +55,9 @@ public class CustomUserDetails implements UserDetails {
     @Override
     public boolean isEnabled() {
         return user.getIsActive();
+    }
+
+    public String getActualUsername() {
+        return user.getUsername();
     }
 }
